--- a/package.json
+++ b/package.json
@@ -20,13 +20,20 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@ionic-native/camera": "^5.10.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.10.0",
+    "@ionic-native/ionic-webview": "^5.10.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.0.0",
     "cordova-ios": "^5.0.1",
+    "cordova-plugin-camera": "4.1.0",
+    "cordova-plugin-file": "6.0.2",
     "cordova-plugin-ionic": "^5.4.0",
+    "cordova-sqlite-storage": "^3.2.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -80,7 +87,12 @@
         "MAX_STORE": "2",
         "MIN_BACKGROUND_DURATION": "30",
         "UPDATE_API": "https://api.ionicjs.com"
-      }
+      },
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "android",
